import { createSoraKuvausForm } from './soraKuvausForm/createSoraKuvausForm';
import { editSoraKuvausForm } from './soraKuvausForm/editSoraKuvausForm';

describe('createSoraKuvaus', createSoraKuvausForm);
describe('editSoraKuvaus', editSoraKuvausForm);
