exports[`createSoraKuvaus > should be able to create sora-kuvaus #0`] =
{
  "kielivalinta": [
    "fi"
  ],
  "koulutustyyppi": "amm",
  "metadata": {
    "koulutusKoodiUrit": [
      "koulutus_652501#12"
    ],
    "koulutusalaKoodiUri": "kansallinenkoulutusluokitus2016koulutusalataso2_073#1",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    }
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "tila": "julkaistu"
};

exports[`editSoraKuvaus > should be able to edit sora-kuvaus #0`] =
{
  "id": "123e4567-e89b-12d3-a456-426655440000",
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutustyyppi": "amm",
  "metadata": {
    "koulutusKoodiUrit": [
      "koulutus_754101#7"
    ],
    "koulutusalaKoodiUri": "kansallinenkoulutusluokitus2016koulutusalataso2_073#1",
    "kuvaus": {
      "fi": "<p><strong>Kuvaus fi</strong></p>"
    }
  },
  "modified": "2019-04-01T13:01",
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Fi nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "tila": "tallennettu"
};

exports[`editSoraKuvaus > [r] should be able to edit sora-kuvaus #0`] =
{
  "id": "123e4567-e89b-12d3-a456-426655440000",
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutustyyppi": "amm",
  "metadata": {
    "koulutusKoodiUrit": [
      "koulutus_754101#7"
    ],
    "koulutusalaKoodiUri": "kansallinenkoulutusluokitus2016koulutusalataso2_073#1",
    "kuvaus": {
      "fi": "<p><strong>Kuvaus fi</strong></p>"
    }
  },
  "modified": "2019-04-01T13:01",
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Fi nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "tila": "tallennettu"
};
